--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/raleway": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/drawer": "^6.6.15",
@@ -22,7 +23,7 @@
     "expo": "~50.0.5",
     "expo-constants": "~15.4.5",
     "expo-device": "~5.9.3",
-    "expo-font": "~11.10.2",
+    "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-localization": "~14.8.3",
     "expo-router": "^3.4.6",
@@ -37,6 +38,7 @@
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.1",
     "react-native-mmkv": "^2.12.2",
+    "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
