--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.7",
+    "@shopify/flash-list": "1.6.3",
     "@supabase/supabase-js": "^2.38.4",
     "@tamagui/font-inter": "1.74.8",
     "@tamagui/react-native-media-driver": "1.74.8",
@@ -22,6 +23,7 @@
     "@tanstack/react-query": "^5.28.6",
     "expo": "~50.0.5",
     "expo-constants": "~15.4.5",
+    "expo-dev-client": "~3.3.11",
     "expo-device": "~5.9.3",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
@@ -36,6 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.14.1",
     "react-native-mmkv": "^2.12.2",
     "react-native-pager-view": "6.2.3",
