--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.7",
+    "@shopify/admin-api-client": "^0.2.9",
     "@shopify/flash-list": "1.6.3",
-    "@supabase/supabase-js": "^2.38.4",
+    "@shopify/storefront-api-client": "^0.3.4",
     "@tamagui/font-inter": "1.74.8",
     "@tamagui/react-native-media-driver": "1.74.8",
     "@tamagui/shorthands": "1.74.8",
