--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-reanimated": "~3.6.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
     "tamagui": "1.74.8"
