--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jotai": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.4",
     "react-native": "0.73.6",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.14.1",
