--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native": "0.73.6",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.14.1",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-mmkv": "^2.12.2",
     "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.3",
