--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-web-browser": "~12.8.2",
     "i18n-js": "^4.4.3",
     "jotai": "^2.7.1",
+    "libphonenumber-js": "^1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.4",
